--- a/pages/chat/chat.wxml
+++ b/pages/chat/chat.wxml
@@ -163,7 +163,7 @@
     </view>
     <view style="width: 24%; height: 40px; margin-left: 4%;">
       <view style="width: 100%; height: 100%;">
-        <image class='jiahao' bindtap="" src='https://s3.bmp.ovh/imgs/2022/06/22/6bc66581fc9650d1.png' style="width: 62%; height: 95%; display: inline-block; box-sizing: border-box"></image>
+        <image class='jiahao' bindtap="uploadSound" src='https://s3.bmp.ovh/imgs/2022/06/22/6bc66581fc9650d1.png' style="width: 62%; height: 95%; display: inline-block; box-sizing: border-box"></image>
       </view>
       <view style="font-size: 12px;color: #a8a8a8; margin-left: 15%; margin-top: 2px;"><text>语音</text></view>
     </view>
